// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Default props and rendering - Component with grey theme, white background verifies the snapshot for the component 1`] = `
<div
  role="region"
>
  <div
    className="ajc-flex-column ajc-flex-justify-left ajc-width-dialog-parent"
    id="test-dialog-id-root"
  >
    <div
      className="ajc-flex-row ajc-flex-justify-left ajc-dialog-title ajc-width-dialog ajc-text-white ajc-font-default ajc-background-grey-2"
      id="test-dialog-id-title"
    >
      <h2
        className="ajc-font-dialog-title"
      >
        Test Dialog Title
      </h2>
    </div>
    <div
      className="ajc-flex-row ajc-flex-justify-left ajc-dialog-content ajc-width-dialog-content ajc-background-white"
      id="test-dialog-id-content-area-root"
    >
      <div
        className="ajc-flex-column ajc-flex-justify-left ajc-text-black ajc-font-default"
        id="test-dialog-id-content-area"
      >
        Test Dialog Content.
      </div>
    </div>
    <div
      className="ajc-flex-row ajc-flex-justify-center ajc-dialog-footer ajc-width-dialog ajc-font-default ajc-background-grey-2"
      id="test-dialog-id-footer"
    />
  </div>
</div>
`;

exports[`Dialog Transferred props and rendering - Component with grey theme, yellow background and buttons list verifies the snapshot for the component 1`] = `
<div
  role="region"
>
  <div
    className="ajc-flex-column ajc-flex-justify-left ajc-width-dialog-parent"
    id="test-dialog-id-root"
  >
    <div
      className="ajc-flex-row ajc-flex-justify-left ajc-dialog-title ajc-width-dialog ajc-text-white ajc-font-default ajc-background-grey-2"
      id="test-dialog-id-title"
    >
      <h2
        className="ajc-font-dialog-title"
      >
        Test Dialog Title
      </h2>
    </div>
    <div
      className="ajc-flex-row ajc-flex-justify-left ajc-dialog-content ajc-width-dialog-content ajc-background-yellow"
      id="test-dialog-id-content-area-root"
    >
      <div
        className="ajc-flex-column ajc-flex-justify-left ajc-text-black ajc-font-default"
        id="test-dialog-id-content-area"
      >
        Test Dialog Content.
      </div>
    </div>
    <div
      className="ajc-flex-row ajc-flex-justify-center ajc-dialog-footer ajc-width-dialog ajc-font-default ajc-background-grey-2"
      id="test-dialog-id-footer"
    >
      <button
        className="ajc-dialog-footer-button ajc-text-white ajc-menu-item-grey"
        id="save-button"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
      <button
        className="ajc-dialog-footer-button ajc-text-white ajc-menu-item-grey"
        id="cancel-button"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog Transferred props and rendering - Component with red theme, grey background and buttons list verifies the snapshot for the component 1`] = `
<div
  role="region"
>
  <div
    className="ajc-flex-column ajc-flex-justify-left ajc-width-dialog-parent"
    id="test-dialog-id-root"
  >
    <div
      className="ajc-flex-row ajc-flex-justify-left ajc-dialog-title ajc-width-dialog ajc-text-white ajc-font-default ajc-background-red"
      id="test-dialog-id-title"
    >
      <h2
        className="ajc-font-dialog-title"
      >
        Test Dialog Title
      </h2>
    </div>
    <div
      className="ajc-flex-row ajc-flex-justify-left ajc-dialog-content ajc-width-dialog-content ajc-background-grey-1"
      id="test-dialog-id-content-area-root"
    >
      <div
        className="ajc-flex-column ajc-flex-justify-left ajc-text-black ajc-font-default"
        id="test-dialog-id-content-area"
      >
        Test Dialog Content.
      </div>
    </div>
    <div
      className="ajc-flex-row ajc-flex-justify-center ajc-dialog-footer ajc-width-dialog ajc-font-default ajc-background-red"
      id="test-dialog-id-footer"
    >
      <button
        className="ajc-dialog-footer-button ajc-text-white ajc-menu-item-red"
        id="save-button"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
      <button
        className="ajc-dialog-footer-button ajc-text-white ajc-menu-item-red"
        id="cancel-button"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;
